--- a/index.Rmd
+++ b/index.Rmd
@@ -33,7 +33,7 @@ We gratefully acknowledge the support of Alfred P.\ [Sloan Foundation Grant G-20
 # Background
 We start by providing a short list of background references that frame a particular set of research topics. @AbowdSchmutte:Privacy:AER show how to combine formal privacy models with the classic theory of public goods to understand and guide decisions about privacy protection and data dissemination. For the neophyte, @Nissim:DPNonTech:WP:2018 provide a non-technical introduction to formal privacy models in general, and differential privacy in particular.  @Heffetz2014 also introduce differential privacy, but targeted toward economists. After reading these introductory treatments, you should review the textbook treatment of differential privacy in @Dwork:Roth:journal:version:2014, focusing on Chapters 1--3. We also recommend consultation of the very fine tutorial ["Differential Privacy in the Wild: A tutorial on current practices and open challenges"](https://users.cs.duke.edu/~ashwin/index.html#tutorials) by Michael Hay, Xi He, and Ashwin Machanavajjhala.
 
-To provide a concrete grounding in practical issues of privacy,  @jones:2017 summarizes the history of privacy breaches and privacy protection in the U.S. statistical system. It is important to ask how formal privacy models do, and do not, capture common language and legal interpretations of privacy. As such, we also recommend a review of some of the laws governing data privacy in the U.S. , e.g. @title13 and  @cipsea (Confidential Information Protection and Statistical Efficiency Act, also known as CIPSEA). A quick review of the Harvard Data Privacy Lab website [@Harvard:DataPrivacyLab] can provide a sense of how differential privacy is being implemented in various settings. @Goroff2015 also provides a very useful overview of the key issues in this reading course for a lay audience.
+To provide a concrete grounding in practical issues of privacy,  @jones:2017 summarizes the history of privacy breaches and privacy protection in the U.S. statistical system. It is important to ask how formal privacy models do, and do not, capture common language and legal interpretations of privacy. As such, we also recommend a review of some of the laws governing data privacy in the U.S. , e.g. @title13 and  @cipsea (Confidential Information Protection and Statistical Efficiency Act, also known as CIPSEA). A quick review of the Harvard Privacy Tools website [@Harvard:PrivacyTools] can provide a sense of how differential privacy is being implemented in various settings. @Goroff2015 also provides a very useful overview of the key issues in this reading course for a lay audience.
 @Abowd:JPC:2017 and @abowd:fcsm:2016 survey formal privacy systems being implemented at the Census Bureau.
 
 
@@ -41,7 +41,7 @@ To provide a concrete grounding in practical issues of privacy,  @jones:2017 sum
 The literature on formal privacy is vast. Here, we focus on those papers that will help orient the reader to the key ideas and tools of differential privacy, particularly those relevant to the economic problem of determining optimal privacy protection when publishing population statistics. For the purpose of this reading course and associated bibliography, we associate formal privacy as a literature emerging in computer science out of cryptography. In the section on "[Statistical Disclosure Limitation]", we recommend additional readings from the SDL literature, which has a distinct origin in statistics.
 
 
-@Dworketal:2006 is generally regarded as the first paper to formally introduce differential privacy. Its development was due, in part, to the *database reconstruction theorem* published by @Dinur:2003:RIW:773153.773173, which showed that most data publication mechanisms are blatantly non-private in a well-defined sense. The database reconstruction theorem has recently been shown to have very practical consequences for the statistical disclosure protections in place at the Census Bureau. The concept of *k-anonymity* developed by @sweeney:2002 is another important antecedent that bridges the formal privacy and SDL literatures.
+@Dworketal:2006 is generally regarded as the first paper to formally introduce differential privacy. Its development was due, in part, to the *database reconstruction theorem* published by @Dinur:2003:RIW:773153.773173, which showed that most data publication mechanisms are blatantly non-private in a well-defined sense. The database reconstruction theorem has recently been shown to have very practical consequences for the statistical disclosure protections in place at the Census Bureau. The concepts of *k-anonymity* [@sweeney:2002] and *l-diversity* [@Machanavajjhala:2007:LDP:1217299.1217302] are  important antecedents that bridge the formal privacy and SDL literatures.
 
 In assessing formal privacy as a framework for modeling data publication, it is natural to consider the optimal, or maximal amount of data accuracy that can be provided while maintaining privacy. @Gupta:2012:ICP:2238936.2238961 establish a mechanism that is universally optimal for a broad class of data users, suggesting that technical efficiency could be guaranteed in private data publication without the need to learn about the preferences or side information of data consumers. However, @BrennerNissim:Impossibility:SIAM:2014 showed that their result is not generalizable to broader types of data publication.
 @Nissim:2012:PMD:2229012.2229073 provide a clear and instructive illustration of how individual preferences for privacy can be modeled in mechanism design problems. 
