--- a/library.bib
+++ b/library.bib
@@ -164,7 +164,6 @@ eprint = {
   howpublished = {\url{https://www.census.gov/research/data/restricted_use_microdata.html}},
   year         = {2018},
   note         = {Accessed: 2018-03-17},
-  doi          = {N/A},
   keywords     = {policy},
   url          = {https://www.census.gov/research/data/restricted_use_microdata.html},
 }
@@ -174,9 +173,17 @@ eprint = {
   title        = {{Harvard Data Privacy Lab Homepage}},
   year         = {2018},
   note         = {Accessed: 2018-03-17},
-  doi          = {N/A},
   keywords     = {background},
   url          = {https://dataprivacylab.org/},
+}
+
+@Misc{Harvard:PrivacyTools,
+  author       = {{Harvard University Privacy Tools Project}},
+  title        = {{Homepage}},
+  year         = {2019},
+  note         = {Accessed: 2019-04-01},
+  keywords     = {background},
+  url          = {https://privacytools.seas.harvard.edu/},
 }
 
 @Article{McSherry:PINQ:SIGMOD:2009,
@@ -393,7 +400,6 @@ eprint = {
   volume    = {abs/1707.04982},
   bibsource = {dblp computer science bibliography, http://dblp.org},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/BassilyNST17},
-  doi       = {N/A},
   keywords  = {Formal Privacy},
   timestamp = {Sat, 05 Aug 2017 14:56:07 +0200},
   url       = {http://arxiv.org/abs/1707.04982},
@@ -3986,7 +3992,7 @@ instead of a hierarchy.},
   timestamp = {2016.08.30},
 }
 
-@Misc{cipsea,
+@Misc{cipsea2002,
   author       = {{44 U.S.~Code}},
   title        = {{C}onfidential {I}nformation {P}rotection and {S}tatistical {E}fficency {A}ct},
   year         = {2002},
@@ -3997,6 +4003,18 @@ instead of a hierarchy.},
   timestamp    = {2016.08.30},
   url          = {http://www.law.cornell.edu/topn/confidential_information_protection_and_statistical_efficiency_act_of_2002},
 }
+
+@Misc{cipsea,
+  author       = {{H.R.4174}},
+  title        = {{C}onfidential {I}nformation {P}rotection and {S}tatistical {E}fficency {A}ct},
+  year         = {2018},
+  note         = {Pub. L. 115-435, title III, Jan 14 2019, 132 Stat. 5529},
+  keywords     = {policy, background},
+  lastaccessed = {April 1, 2019},
+  url          = {https://www.congress.gov/bill/115th-congress/house-bill/4174},
+  note = {part of the Foundations for Evidence-Based Policymaking Act of 2018}
+}
+
 
 @Misc{title13,
   author       = {{13 U.S.~Code}},
