--- a/index.Rmd
+++ b/index.Rmd
@@ -30,6 +30,9 @@ Github`r if (knitr::is_html_output()) ', or by clicking on the edit button in th
 ## Support 
 We gratefully acknowledge the support of Alfred P.\ [Sloan Foundation Grant G-2015-13903](https://sloan.org/grant-detail/6845) and [NSF Grant SES-1131848](http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1131848).
 
+## Disclaimer
+The views expressed in this paper are those of the authors and not those of the U.S. Census Bureau or other sponsors.
+
 # Background
 We start by providing a short list of background references that frame a particular set of research topics. @AbowdSchmutte:Privacy:AER show how to combine formal privacy models with the classic theory of public goods to understand and guide decisions about privacy protection and data dissemination. For the neophyte, @Nissim:DPNonTech:WP:2018 provide a non-technical introduction to formal privacy models in general, and differential privacy in particular.  @Heffetz2014 also introduce differential privacy, but targeted toward economists. After reading these introductory treatments, you should review the textbook treatment of differential privacy in @Dwork:Roth:journal:version:2014, focusing on Chapters 1--3. We also recommend consultation of the very fine tutorial ["Differential Privacy in the Wild: A tutorial on current practices and open challenges"](https://users.cs.duke.edu/~ashwin/index.html#tutorials) by Michael Hay, Xi He, and Ashwin Machanavajjhala.
 
