Re #18 fixed for failing compilation

--- a/library.bib
+++ b/library.bib
@@ -3304,7 +3304,7 @@ We provide a formal analysis of the error of query answers produced by the mecha
   articleno  = {3},
   doi        = {10.1145/1217299.1217302},
   issue_date = {March 2007},
-  keywords   = {\l-diversity, k-anonymity, Data privacy, privacy-preserving data publishing, formal privacy},
+  keywords   = {\l-diversity, primary, k-anonymity, Data privacy, privacy-preserving data publishing, formal privacy},
   owner      = {vilhuber},
   publisher  = {ACM},
   timestamp  = {2016.08.30},
