--- a/primary.bib
+++ b/primary.bib
@@ -677,6 +677,14 @@
   keywords     = {background},
   url          = {https://dataprivacylab.org/},
 }
+@Misc{Harvard:PrivacyTools,
+  author       = {{Harvard University Privacy Tools Project}},
+  title        = {{Homepage}},
+  year         = {2019},
+  note         = {Accessed: 2019-04-01},
+  keywords     = {background},
+  url          = {https://privacytools.seas.harvard.edu/},
+}
 
 @Article{Li2014,
   author        = {Li, Chao and Li, Daniel Yang and Miklau, Gerome and Suciu, D A N},
@@ -947,6 +955,28 @@
   keywords  = {formal privacy, primary},
   owner     = {John Abowd},
   timestamp = {2014.12.19},
+}
+
+@Article{Machanavajjhala:2007:LDP:1217299.1217302,
+  author     = {Machanavajjhala, Ashwin and Kifer, Daniel and Gehrke, Johannes and Venkitasubramaniam, Muthuramakrishnan},
+  title      = {L-diversity: privacy beyond k-anonymity},
+  journal    = {ACM Transactions on Knowledge Discovery from Data},
+  year       = {2007},
+  volume     = {1},
+  number     = {1},
+  month      = {3},
+  issn       = {1556-4681},
+  abstract   = {In this article, we show using two simple attacks that a k-anonymized dataset has some subtle but severe privacy problems. First, an attacker can discover the values of sensitive attributes when there is little diversity in those sensitive attributes. This is a known problem. Second, attackers often have background knowledge, and we show that k-anonymity does not guarantee privacy against attackers using background knowledge. We give a detailed analysis of these two attacks, and we propose a novel and powerful privacy criterion called L-diversity that can defend against such attacks. In addition to building a formal foundation for L-diversity, we show in an experimental evaluation that L-diversity is practical and can be implemented efficiently.},
+  acmid      = {1217302},
+  address    = {New York, NY, USA},
+  articleno  = {3},
+  doi        = {10.1145/1217299.1217302},
+  issue_date = {March 2007},
+  keywords   = {\l-diversity, k-anonymity, Data privacy, privacy-preserving data publishing, formal privacy, primary},
+  owner      = {vilhuber},
+  publisher  = {ACM},
+  timestamp  = {2016.08.30},
+  url        = {http://doi.acm.org/10.1145/1217299.1217302},
 }
 
 @Article{Taylor:Consumer:RAND:2004,
