Re #18 reverting styling, fixing last bib reference

--- a/primary.bib
+++ b/primary.bib
@@ -167,7 +167,7 @@
   url          = {https://www.law.cornell.edu/uscode/pdf/lii_usc_TI_13.pdf},
 }
 
-@Misc{cipsea,
+@Misc{cipsea2002,
   author       = {{44 U.S.~Code}},
   title        = {{C}onfidential {I}nformation {P}rotection and {S}tatistical {E}fficency {A}ct},
   year         = {2002},
@@ -177,6 +177,17 @@
   owner        = {vilhuber},
   timestamp    = {2016.08.30},
   url          = {http://www.law.cornell.edu/topn/confidential_information_protection_and_statistical_efficiency_act_of_2002},
+}
+
+@Misc{cipsea,
+  author       = {{H.R.4174}},
+  title        = {{C}onfidential {I}nformation {P}rotection and {S}tatistical {E}fficency {A}ct},
+  year         = {2018},
+  note         = {Pub. L. 115-435, title III, Jan 14 2019, 132 Stat. 5529},
+  keywords     = {policy, background},
+  lastaccessed = {April 1, 2019},
+  url          = {https://www.congress.gov/bill/115th-congress/house-bill/4174},
+  note = {part of the Foundations for Evidence-Based Policymaking Act of 2018}
 }
 
 @Misc{commerce.gov_2018,
