Fixes to errors in library.bib

--- a/library.bib
+++ b/library.bib
@@ -1990,13 +1990,13 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   title     = {{Calibrating Noise to Sensitivity in Private Data Analysis}},
   booktitle = {Proceedings of the Third conference on Theory of Cryptography},
   year      = {2006},
-  series    = {TCC'06},
+  series    = {TCC06},
   pages     = {265--284},
   address   = {Berlin, Heidelberg},
   publisher = {Springer-Verlag},
   note      = {DOI:10.1007/11681878{\_}14},
   acmid     = {2180305},
-  doi       = {10.29012/jpc.v7i3.405},
+  doi       = {10.1007/11681878_14},
   isbn      = {978-3-540-32731-8},
   keywords  = {formal privacy, primary},
   location  = {New York, NY},
@@ -2004,6 +2004,21 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
   url       = {https://link.springer.com/chapter/10.1007%2F11681878_14},
+}
+
+@article{Dworketal:JPC:2017,
+  doi = {10.29012/jpc.v7i3.405},
+  url = {https://doi.org/10.29012/jpc.v7i3.405},
+  year = {2017},
+  month = may,
+  publisher = {Journal of Privacy and Confidentiality},
+  volume = {7},
+  number = {3},
+  pages = {17--51},
+  keywords  = {formal privacy, primary},
+  author = {Cynthia Dwork and Frank McSherry and Kobbi Nissim and Adam Smith},
+  title = {Calibrating Noise to Sensitivity in Private Data Analysis},
+  journal = {Journal of Privacy and Confidentiality}
 }
 
 @Article{Dwork2008,
@@ -2642,7 +2657,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   title     = {Iterative constructions and private data release},
   booktitle = {Proceedings of the 9th International Conference on Theory of Cryptography},
   year      = {2012},
-  series    = {TCC'12},
+  series    = {TCC12},
   pages     = {339--356},
   address   = {Berlin, Heidelberg},
   publisher = {Springer-Verlag},
@@ -4121,13 +4136,13 @@ Book: The rapid growth of electronic commerce, along with changes in information
 
 %%%% ERROR
 
-@Article{Varian1998,
+@techreport{Varian1998,
   author    = {Varian, Hal R},
   title     = {{Markets for Information Goods}},
-  journal   = {October},
+  month   = oct,
   year      = {1998},
-  volume    = {1998},
-  number    = {4},
+  type      = {mimeo},
+  institution = {UC Berkeley School of Information},
   pages     = {1--19},
   abstract  = {Much has been written about the difficulties that ``information'' poses for neoclassical economics. How ironic that ICE-information, communication, and entertainment-now comprises the largest sector in the American economy. If information poses problems for economic theory, so much the worse for economic theory: real markets seem to deal with information rather well. This paradox is the central theme of this essay: information, that slippery and strange economic good, is, in fact, handled very well by market institutions. The reason is that real markets are much more creative than those simple competitive markets studied in Econ 1. The fact that real-life markets can handle a good as problematic as is a testament to the flexibility and robustness of market institutions.},
   keywords  = {value of data, primary},
@@ -4686,7 +4701,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
 }
 
 @Article{Burkill:Web:PLOSONE:2016,
-  author    = {Burkill, Sarah AND Copas, Andrew AND Couper, Mick P. AND Clifton, Soazig AND Prah, Philip AND Datta, Jessica AND Conrad, Frederick AND Wellings, Kaye AND Johnson, Anne M. AND Erens, Bob},
+  author    = {Burkill, Sarah and Copas, Andrew and Couper, Mick P. and Clifton, Soazig and Prah, Philip and Datta, Jessica and Conrad, Frederick and Wellings, Kaye and Johnson, Anne M. and Erens, Bob},
   title     = {Using the Web to Collect Data on Sensitive Behaviours: A Study Looking at Mode Effects on the British National Survey of Sexual Attitudes and Lifestyles},
   journal   = {PLOS ONE},
   year      = {2016},
@@ -5221,17 +5236,17 @@ Book: The rapid growth of electronic commerce, along with changes in information
   abstract  = {Replication archive for http://digitalcommons.ilr.cornell.edu/ldi/22/},
   doi       = {10.5281/zenodo.345385},
   owner     = {vilhuber},
-  publisher = {Zenodo},
+  institution = {Zenodo},
   timestamp = {2017.12.22},
   url      = {https://doi.org/10.5281/zenodo.345385},
 }
-{RepArchive:Abowd:Privacy:LDI:2018,
+@Misc{RepArchive:Abowd:Privacy:LDI:2018,
   author    = {Abowd, John M. and Schmutte, Ian M.},
-  title     = {Replication archive for: {A]n Economic Analysis of Privacy Protection and Statistical Accuracy as Social Choices},
+  title     = {Replication archive for: {A}n Economic Analysis of Privacy Protection and Statistical Accuracy as Social Choices},
   month     = 3,
   year      = {2018},
   doi       = {10.5281/zenodo.1208758},
-  publisher = {Zenodo},
+  institution = {Zenodo},
   url      = {https://doi.org/10.5281/zenodo.1208758},
 }
 
@@ -5391,7 +5406,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
 }
 
 @Article{10.1371/journal.pgen.1000167,
-  author    = {Homer, Nils AND Szelinger, Szabolcs AND Redman, Margot AND Duggan, David AND Tembe, Waibhav AND Muehling, Jill AND Pearson, John V. AND Stephan, Dietrich A. AND Nelson, Stanley F. AND Craig, David W.},
+  author    = {Homer, Nils and Szelinger, Szabolcs and Redman, Margot and Duggan, David and Tembe, Waibhav and Muehling, Jill and Pearson, John V. and Stephan, Dietrich A. and Nelson, Stanley F. and Craig, David W.},
   title     = {Resolving Individuals Contributing Trace Amounts of {DNA} to Highly Complex Mixtures Using High-Density {SNP} Genotyping Microarrays},
   journal   = {PLOS Genetics},
   year      = {2008},
@@ -5530,7 +5545,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
 }
 
 @TechReport{USDA:SchoolLunch:2008,
-  author      = {{U.S.\ Department of Agriculture, Food and Nutrition Research Service, Office of Research, Nutrition and Analysis}},
+  author      = {{U.S. Department of Agriculture, Food and Nutrition Research Service, Office of Research, Nutrition and Analysis}},
   title       = {School Lunch and Breakfast Cost Study II, Final Report},
   institution = {Special Nutition Programs},
   year        = {2008},
